python/src/rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: rabbitmq
spec: 
  serviceName: "not-applicable"
  selector:
    matchLabels: 
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec: 
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13.0-management
          ports: 
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp # advanced message queuing protocol
              protocol: TCP
              containerPort: 5672
          volumeMounts:   
            - mountPath: "/var/lib/rabbitmq" # the rabbitmq will store all the data in this location locally, to make the data persistent in case of pod crash
              name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim: 
            claimName: rabbitmq-pvc
